@@ -329,7 +329,8 @@
                 shadowtext CDATA #REQUIRED
                 relativetextsize CDATA #REQUIRED
                 offsetfrombaseline CDATA #REQUIRED
-                wordbyword CDATA #REQUIRED>
+                wordbyword CDATA #REQUIRED
+                fontattribute CDATA #REQUIRED>
 
 <!-- 
         A paragraph and a style can have counter data.
