@@ -132,3 +132,4 @@ Changes after KPresenter 1.2
 - Add time/date variable offset
 - Fix #24242 add variable : created/modified/printed document date
 - Now we can copy text of comment.
+- Add support for font attribute
